styles.css
/* Fonts */
@font-face {
  font-family: 'Futura';
  src: url(fonts/futura_medium_bt.ttf);
}

/* Variable Fonts */
:root{
  --header-height: 3rem;
  --font-semi: 600;
}
/* Colors */
:root{
  --first-color: rgb(253, 101, 95);
  --second-color: #000000;
}

:root{
  --body-font: 'Futura', sans-serif;
  --big-font-size: 2rem;
  --h2-font-size: 1.25rem;
  --normal-font-size: 1rem;
}

/* Margins */
:root{
  --mb-1: 0.5rem;
  --mb-2: 1rem;
  --mb-3: 1.5rem;
  --mb-4: 2rem;
  --mb-5: 2.5rem;
  --mb-6: 3rem;
}

:root{
  --z-back: -10;
  --z-normal: 1;
  --z-tooltip: 10;
  --z-fixed: 100;
}

/* Base */
*, ::before, ::after{
  box-sizing: border-box;
}

html{
  scroll-behavior: smooth;
}

body{
  margin: var(--header-height) 0 0 0;
  font-family: var(--body-font);
  font-size: var(--normal-font-size );
  color: var(--second-color);
  background-color: rgb(253, 255, 125);
}

h1,h2,p{
  margin: 2;
}

ul{
  margin: 0;
  padding: 0;
  list-style: none;
}

a{
  text-decoration:  none;
}

img{
  max-width: 100%;
  height: auto;
  display: block;
}

/* CSS Classes */
.section-title{
  position: relative;
  font-size: var(--h2-font-size);
  color: var(--first-color);
  margin-top: var(--mb-2);
  margin-bottom: var(--mb-4);
  text-align: center;
  text-transform: uppercase;
}

.section-title::after{
  position: absolute;
  content: "";
  width: 64px;
  height: 0.18rem;
  left: 0;
  right: 0;
  margin: auto;
  top: 2rem;
  background-color: var(--first-color);
}

.section{
  padding-top: 3rem;
  padding-bottom: 2rem;
}

.bd-grid{
  max-width: 1024px;
  display: grid;
  grid-template-columns: 100%;
  grid-gap: 2rem;
  width: calc(100% - 2rem);
  margin-left: var(--mb-2);
  margin-right: var(--mb-2);
}

.l-header{
  width: 100%;
  position: fixed;
  top: 0;
  left: 0;
  z-index: var(--z-fixed);
  background-color: var(--first-color);
  box-shadow: 0px 1px 4px rgba(146, 161, 176, .15 );
}

/* Navigation Bar */
.nav{
  height: var(--header-height);
  display: flex;
  justify-content: center;
  align-items: center;
  font-weight: var(--font-semi);
}

@media screen and (max-width: 768px){

  .nav{
    justify-content: space-between;
  }

  .nav_menu{
    position: fixed;
    top: var(--header-height);
    right: -100%;
    width: 80%;
    height: 100%;
    padding: 2rem;
    background-color: var(--first-color);
    transition: .5s; 
  }

  .work_img{
    width: 400px;
    position: relative;
    display: block;
    margin-left: auto;
    margin-right: auto;
  }

}
.nav_item{
  margin-bottom:  var(--mb-4);
}

.nav_link{
  position: relative;
  color: #fff;
}

.nav_link:hover{
  position: relative;
}

.nav_link:hover::after{
  position: absolute;
  content: "";
  width: 100%;
  height: 0.18rem;
  left: 0;
  top: 2rem;
  background-color: rgb(253, 255, 125);
}

.nav_logo{
  color: var(--second-color);
}

.nav_toggle{
  color: var(--second-color);
  font-size: 1.5rem;
  cursor: pointer;
}

.active::after{
  position: absolute;
  content: "";
  width: 100%;
  height: 0.18rem;
  left: 0;
  top: 2rem;
  background-color: rgb(253, 255, 125);
}

/* Show menu */
.show{
   right: 0 ;

}

/* Home */
.home{
  height: calc(100vh - 3rem);
  row-gap: 1rem;
}

.home_data{
  align-self: center;
}

.home_title{
  font-size: var(--big-font-size);
  margin-bottom: var(--mb-5);
}

.home_title-color{
  color: var(--first-color);
}

.home_social{
  display: flex;
  flex-direction: column;
}

.home_social-icon{
  width: max-content;
  margin-bottom: var(--mb-2);
  font-size: 1.5rem;
  color: var(--second-color);
}

.home__social-icon:hover{
  color: var(--first-color);
}

.home_img{
  position: absolute;
  right: 0 ;
  bottom: 0 ;
  width: 295px;
}

.home_img img{
    border-radius: 50%;
}

/* Buttons */
.button{
  display: inline-block;
  background-color: var(--first-color);
  color: #fff;
  padding: .75rem 2.5rem;
  font-weight: var(--font-semi);
  border-radius: .5rem;
}

.button:hover{
  box-shadow: 0 10px 36px rgba(0,0,0,.15);
}

/* About */
.about_subtitle{
  margin-bottom: var(--mb-2);
}

/* Image IF I HAVE ONE! */
/* .about_img{
  justify-self: center;
}

.about_img img{
  width: 200px;
  border-radius: .5rem;
} */



/* Skills */
.skills_container{
  row-gap: 2rem;
  /* text-align: center; */
}

.skills_subtitle{
  margin-bottom: var(--mb-2);
}

.skills_text{
  margin-bottom: var(--mb-4);
}

.skills_data{
  display: flex;
  justify-content: space-between;
  align-items: center;
  position: relative;
  font-weight: var(--font-semi);
  padding: .5rem 1rem; 
  margin-bottom: var(--mb-4);
  border-radius: .5rem;
  box-shadow: 0 4px 25px rgba(14,36,39,.15);
}

.skills_icon{
  font-size: 2rem;
  margin-right: var(--mb-2);
  color: var(--first-color);
}

.skills_names{
  display: flex;
  align-items: center;
}

.skills_bars{
  position: absolute;
  left: 0;
  bottom: 0;
  background-color: var(--first-color);
  height: .25rem;
  border-radius: .5rem;
  z-index: var(--z-back);
}

.skills_html{
  width: 70%;
}

.skills_css {
  width: 65%;
}

.skills_javascript {
  width: 55%;
}

.skills_unity {
  width: 80%;
}

.skills_android{
  width: 55%;
}

.skills_nodejs{
  width: 50%;
}

/* .skills_img{
  border-radius: .5rem; 
} */

.unityImg{
  width:30px;
  height: 30px;
  font-size: 2rem;
  margin-right: var(--mb-3);
  color: var(--first-color);
}

p {
  padding-top: 1rem;
  padding-bottom: 2rem;
}

.work{
  text-align: center;
}

.work_container{
  row-gap: 2rem; 
}

.work_text {
  font-size: 4vh;
  color: white;
  cursor: pointer;
  text-shadow: black;
  text-transform: uppercase;
  text-align: center;
  position: absolute;
  margin: 0 auto;
  left: 0;
  right: 0;
  top: 20%;
}

.img_description{
  font-size: 2.5vh;
  color: white;
  cursor: pointer;
  position: absolute;
  margin: 0 auto;
  left: 0;
  right: 0;
  top: 0;
  padding: 20px;
  text-align: justify;
}

.img_role{
  font-size: 2vh;
  color: white;
  cursor: pointer;
  position: absolute;
  margin: 0 auto;
  left: 0;
  right: 0;
  top: 0;
  padding: 20px;
  text-align: left;
}

.img_tool {
  font-size: 2vh;
  color: white;
  cursor: pointer;
  position: absolute;
  margin: 0 auto;
  left: 0;
  right: 0;
  top: 0;
  padding: 20px;
  text-align: left;
}

/* .work_description{
  color: white;
} */

.work_img:before{
  box-shadow: 0 4px 25px rgba(14,36,49, .15);
  border-radius: .5rem;
  overflow: hidden;
}

.work_img:before{
  content: "";
  display: block;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: rgba(0, 0, 0, 0.3);
  transition: all .2s linear;
}

.work_img:hover:before{
  background: rgba(0, 0, 0, 0.6);
}

.work_img p{
  position: relative;
}

.work_img img {
  transition: 0.5s;
  cursor: pointer;
  border-radius: 0.5rem;
}

/* .work_img img:hover {
  transform: scale(1.1);
} */

.contact_input{
  width: 100%;
  font-size: var(--normal-font-size);
  font-weight: var(--font-semi);
  padding: 1rem;
  border-radius: .5rem;
  border: 1.5px solid var(--second-color);
  outline: none;
  margin-bottom: var(--mb-4);
}

.contact_button{
  display: block;
  border: none;
  outline: none;
  font-size: var(--normal-font-size);
  cursor: pointer;
  margin-left: auto;
  text-transform: uppercase;
  font-family: var(--body-font);

}

/* Footer */
.footer{
  background-color: var(--first-color);
  text-align: center;
  font-weight: var(--font-semi);
  padding: 2rem 0 ;
}

.footer_title{
  font-size: 2rem;
  margin-bottom:  var(--mb-4);
}

.footer_social{
  margin-bottom: var(--mb-4);
}

.footer_icon{
  font-size: 1.5rem;
  color:black;
  margin: 0 var(--mb-2);
}

.imgicon {
  width: 20px !important;
  height: 20px !important;
}



/* Media Queries */
@media screen and (min-width: 768px){
  body{
    margin: 0;
  }

  /* .work_text {
    position: absolute;
    top: 50%;
    left: 50%;
  } */

  .section{
    padding-top: 4rem;
    padding-bottom: 3rem;
  }

  .section-title{
    margin-bottom: var(--mb-6);
  }

  .section-title::after{
    width: 80px;
    top: 3rem;
  }

  .nav{
    height: calc(var(--header-height) + 1rem);
  }

  .nav_list{
    display: flex;
    padding-top: 0;
    text-transform: uppercase;
  }

  .nav_item{
    margin-left: var(--mb-6);
    margin-bottom: 0;
  }

  .nav_toggle{
    display: none;
  }

  .nav_link{
    color: var(--second-color);
  }

  .home{
    height: 100vh;
  }

  .home_data{
    align-self: flex-end;
  }

  .home_social{
    padding-top: 0;
    padding-bottom: 2.5rem;
    flex-direction: row;
    align-self: flex-end;
  }

  .home_social-icon{
    margin-bottom: 0;
    margin-right: var(--mb-3);
  }

  .home_img{
    width: 457px;
    bottom: 35%;
  }

  .about_container .skills_container{
    grid-template-columns: repeat(2,1fr);
    align-items: center;
    text-align: initial;
  }

  .about_img img{
    width: 300px;
  }

  .work_container{
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(2, 1fr);
    column-gap: 2rem;
  }

 .secondary{
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(1, 1fr);
    column-gap: 2rem;
  }

  .contact_form{
    width: 360px;
  }

  .contact_container{
    justify-items: center;
  }
}

@media screen and (min-width: 1024px){
  .bd-grid{
    margin-left: auto;
    margin-right: auto;
  }

  .home_img{
    right: 10% ;
  }

  /* .work_text {
    position: absolute;
    top: 50%;
    left: 50%;
  }
} */

